recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:7: error: ambiguous reference to overloaded definition,
both method - in class Int of type (x: Char)Int
and  method - in class Int of type (x: Byte)Int
match expected type ?
    left(360.-angle)
             ^Tree:8: error: value ^ is not a member of Double
    forward(length*(shrink^steps))
                          ^